load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "certs.go",
        "cli.go",
        "common.go",
        "configmaps.go",
        "datavolume.go",
        "deployments.go",
        "fileConversion.go",
        "pod.go",
        "pv.go",
        "pvc.go",
        "secrets.go",
        "services.go",
        "upload.go",
    ],
    importpath = "kubevirt.io/containerized-data-importer/tests/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/core/v1beta1:go_default_library",
        "//pkg/apis/upload/v1beta1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/common:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/image:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/naming:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/ulikunitz/xz:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/storage/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/equality:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/util/cert:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
    ],
)
