load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/containerized-data-importer/tools/cdi-containerimage-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/common:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_binary(
    name = "cdi-containerimage-server",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "cdi-containerimage-server-bin",
    srcs = [":cdi-containerimage-server"],
    package_dir = "/usr/bin/",
    visibility = ["//visibility:public"],
)
