load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/containerized-data-importer/tools/cdi-func-test-bad-webserver",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cdi-func-test-bad-webserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "cdi-func-test-bad-webserver-bin",
    srcs = [":cdi-func-test-bad-webserver"],
    extension = "tar.gz",
    package_dir = "/usr/bin/",
    visibility = ["//visibility:private"],
)

oci_image(
    name = "cdi-func-test-bad-webserver-image",
    base = "//:testimage_base",
    entrypoint = ["/usr/bin/cdi-func-test-bad-webserver"],
    tars = [":cdi-func-test-bad-webserver-bin"],
    visibility = ["//visibility:public"],
)
