load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/containerized-data-importer/tools/cdi-func-test-file-host-init",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/util:go_default_library",
        "//tests/utils:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "cdi-func-test-file-host-init",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "cdi-func-test-file-host-init-bin",
    srcs = [":cdi-func-test-file-host-init"],
    extension = "tar.gz",
    package_dir = "/usr/bin/",
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "test-img-tar",
    srcs = ["//:test-images"],
    extension = "tar.gz",
    mode = "644",
    package_dir = "/tmp/source",
)

pkg_tar(
    name = "test-invalid-img-tar",
    srcs = ["//:test-invalid-images"],
    extension = "tar.gz",
    mode = "644",
    package_dir = "/tmp/source/invalid_qcow_images",
)

filegroup(
    name = "nginx-conf",
    srcs = [
        ":htpasswd",
        ":nginx.conf",
    ],
)

pkg_tar(
    name = "nginx-conf-tar",
    srcs = [":nginx-conf"],
    extension = "tar.gz",
    mode = "644",
    package_dir = "/etc/nginx/",
)

oci_image(
    name = "cdi-func-test-file-host-init-base-image",
    base = "//:testimage_base",
    tars = [
        ":test-img-tar",
        ":test-invalid-img-tar",
    ],
    visibility = ["//visibility:private"],
)

oci_image(
    name = "cdi-func-test-file-host-init-image",
    base = ":cdi-func-test-file-host-init-base-image",
    entrypoint = [
        "cdi-func-test-file-host-init",
        "-alsologtostderr",
    ],
    tars = [":cdi-func-test-file-host-init-bin"],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "cdi-func-test-file-host-http-image",
    base = "//:testimage_base",
    cmd = ["mkdir -p /usr/share/nginx/html/images/priv && update-ca-trust && update-crypto-policies"],
    entrypoint = ["nginx"],
    env = {
        "container": "",
        "docker": "",
    },
    exposed_ports = [
        "80",
        "81",
        "82",
        "83",
        "444",
    ],
    tars = [":nginx-conf-tar"],
    visibility = ["//visibility:public"],
)
